--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,25 @@
-title: ABLL's home page
-url: http://compute.dtu.dk/~abll
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-author: Anders Boesen Lindbo Larsen
-author_title: PhD student
-email: abll@dtu.dk
-department: Dept. of Applied Mathematics and Computer Science
-department_url: http://compute.dtu.dk
-university: Technical University of Denmark
-university_url: http://dtu.dk
+# Site settings
+title: Andy_Lee's home page
+url: "http://yourdomain.com" # the base hostname & protocol for your site
 
-blog_title: 'Rants by ABLL'
+author: Andy_Lee
+author_title: master student
+email: 690312856@qq.com
+department: School of Software Engineering
+department_url: http://www.scut.edu.cn/sse
+university: South China University of Technology
+university_url: http://www.scut.edu.cn
+
+paginate: 5
+paginate_path: "blog/page:num"
+blog_title: 'Statements by Andy_Lee'
 
 baseurl:
 pubs_path: /pubs
@@ -26,11 +36,8 @@ navigation:
     - title: CV
       link: /cv.html
 
-ga_id: UA-45006161-1
-ga_domain: dtu.dk
-
 highlighter: true
-markdown: redcarpet
+markdown: redcarpet 
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
@@ -54,3 +61,4 @@ scholar:
   details_link: BibTeX
 
   query: "@*"
+
