--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ scholar:
   order: ascending
 
   repository: ./pubs
-  source: ./_bibliography
+  source: /_bibliography
   bibliography: references.bib
   bibliography_template: "{{ reference }} {% if links.pdf %}<a href=\"{{ links.pdf }}\">PDF</a> {% endif %} "
 
