--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ paginate: 5
 paginate_path: "blog/page:num"
 blog_title: 'Statements by Andy_Lee'
 
-baseurl:
+baseurl: /690312856.github.io
 pubs_path: /pubs
 permalink: /:categories/:title
 navigation:
