--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,11 @@ navigation:
     - title: CV
       link: /cv.html
 
+comments:
+  provider:duoshuo
+  duoshuo:
+    short_name:690312856
+
 highlighter: true
 markdown: redcarpet 
 redcarpet:
