--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 author: Andy_Lee
 author_title: master student
-email: 690312856@qq.com
+email: scutliyulong@gmail.com
 department: School of Software Engineering
 department_url: http://www.scut.edu.cn/sse
 university: South China University of Technology
